# mydesktop

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  rename-branch-to-uuid.py
mydesktop/: __main__.py  build.py
tests/: test_date_time.py  test_developer.py  test_texture_app.py
